--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -250,6 +250,10 @@
   result: Refined Iron
   checkForHallucination: true
   checkForMistranslation: true
+- raw: 黑金
+  result: Black Gold
+  checkForHallucination: true
+  checkForMistranslation: true
 - raw: 乌金
   result: Black Gold
   checkForHallucination: true
