Token changes and take out of div

--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -662,3 +662,9 @@
   result: Tea House
   checkForHallucination: true
   checkForMistranslation: true
+
+# Factions
+- raw: 丐门
+  result: Beggar Sect
+  checkForHallucination: true
+  checkForMistranslation: true
