--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -1254,7 +1254,7 @@
   result: Abyssal Sea Sword
   checkForHallucination: true
   checkForMistranslation: true
-- raw: 枰栌外城
-  result: Outer City of Pinglu
+- raw: 外城
+  result: Outer City
   checkForHallucination: true
   checkForMistranslation: true
