--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -53,6 +53,30 @@
   result: Ancestral Treasure Blade
   checkForHallucination: true
   checkForMistranslation: true
+- raw: 完成菩提
+  result: Attain Enlightenment
+  checkForHallucination: true
+  checkForMistranslation: true
+- raw: 完成菩提
+  result: Complete the Academy
+  checkForHallucination: true
+  checkForMistranslation: true
+- raw: 完成机杼
+  result: Complete Weaving
+  checkForHallucination: true
+  checkForMistranslation: true
+- raw: 完成言家
+  result: Complete for Yan Family
+  checkForHallucination: true
+  checkForMistranslation: true
+- raw: 完成农家
+  result: Complete for Farm Family
+  checkForHallucination: true
+  checkForMistranslation: true
+- raw: 学会秘术
+  result: Learn secret arts
+  checkForHallucination: true
+  checkForMistranslation: true
 
 # Sayings
 - raw: 阿弥陀佛
@@ -1262,5 +1286,9 @@
   checkForMistranslation: true
 - raw: 外城
   result: Outer City
+  checkForHallucination: true
+  checkForMistranslation: true
+- raw: 言家
+  result: Yan Family
   checkForHallucination: true
   checkForMistranslation: true
