Glossary and tweaks

--- a/Files/Files.csproj
+++ b/Files/Files.csproj
@@ -26,6 +26,7 @@
 
   <ItemGroup>
     <Folder Include="Raw\Export\" />
+    <Folder Include="Raw\Remainder\" />
     <Folder Include="Raw\SplitDb\" />
   </ItemGroup>
 
