--- a/Files/Files.csproj
+++ b/Files/Files.csproj
@@ -27,7 +27,7 @@
   <ItemGroup>
     <Folder Include="Raw\Export\" />
     <Folder Include="Raw\Assets\" />
-    <Folder Include="Raw\Remainder\" />
+    <Folder Include="Raw\Remaining\" />
     <Folder Include="Raw\SplitDb\" />
   </ItemGroup>
 
