--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -354,6 +354,24 @@
   checkForHallucination: false
   checkForMistranslation: true
 
+# Skills / Recipes
+- raw: 桂枝丹诀
+  result: Guizhi Elixir Formula
+  checkForHallucination: false
+  checkForMistranslation: true
+- raw: 金石为开
+  result: Even metal and stone can be opened
+  checkForHallucination: false
+  checkForMistranslation: true
+- raw: 金浮羽火
+  result: Golden Floating Feather Fire
+  checkForHallucination: false
+  checkForMistranslation: true
+- raw: 明光三梭谱
+  result: Three Shuttles Weave Bright Light
+  checkForHallucination: false
+  checkForMistranslation: true
+
 # Weapons
 - raw: 刀
   result: Blade
