--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -359,6 +359,15 @@
   result: Guizhi Elixir Formula
   checkForHallucination: false
   checkForMistranslation: true
+- raw: 青日百酿诀
+  result: Azure Sun Hundred Brews Formula
+  checkForHallucination: false
+  checkForMistranslation: true
+
+- raw: 钟灵化谷
+  result: Spiritual Essence Transforming into the Valley
+  checkForHallucination: false
+  checkForMistranslation: true
 - raw: 金石为开
   result: Even metal and stone can be opened
   checkForHallucination: false
