--- a/Files/Config.yaml
+++ b/Files/Config.yaml
@@ -4,6 +4,7 @@ url: "http://localhost:11434/api/chat"
 model: "vanilj/phi-4-unsloth"
 #model: "hf.co/unsloth/phi-4-GGUF:Q6_K"
 #model: "hf.co/unsloth/phi-4-GGUF:Q5_K_M"
+#unityVersion: 2022.1.0
 modelParams:
   temperature: 0.2
   max_tokens: 4096
