--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -224,7 +224,7 @@
   checkForHallucination: false
   checkForMistranslation: true
 - raw: 要害
-  result: Critical Hit
+  result: Vital Point
   context: refers to critical or vital points of the body that, if struck, can cause significant damage or even death. In martial arts, it refers to vital areas like the head, neck, or heart. In gaming, it could be used to represent weak spots or critical hit zones that deal more damage when targeted.
   checkForHallucination: false
   checkForMistranslation: true
