--- a/Files/Files.csproj
+++ b/Files/Files.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Mod\Formatted\" />
     <Folder Include="Raw\Export\" />
     <Folder Include="Raw\Assets\" />
     <Folder Include="Raw\Remaining\" />
