--- a/Files/Files.csproj
+++ b/Files/Files.csproj
@@ -10,6 +10,7 @@
     <Folder Include="Mod\Formatted\" />
     <Folder Include="Raw\Export\" />
     <Folder Include="Raw\Assets\" />
+    <Folder Include="Raw\ExportedText\" />
     <Folder Include="Raw\Remaining\" />
     <Folder Include="Raw\SplitDb\" />
   </ItemGroup>
