--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -1431,6 +1431,9 @@
 - raw: 烈火刀
   result: Blazing Blade
   badtrans: true
+- raw: 绝影楼
+  result: Shadowless Tower
+  badtrans: true
 
 # Kingdoms
 - raw: 燕国
@@ -1460,3 +1463,185 @@
   badtrans: true
   context: Refers to the core philosophy and techniques of Tai Chi, emphasizing inner balance, breathing, and spiritual cultivation in addition to physical movements.
   transliteration: Tàijí Xīnfǎ
+
+# Horoscope - 60-year Chinese sexagenary cycle
+- raw: 甲子
+  result: Wood Rat
+  badtrans: true
+- raw: 乙丑
+  result: Wood Ox
+  badtrans: true
+- raw: 丙寅
+  result: Fire Tiger
+  badtrans: true
+- raw: 丁卯
+  result: Fire Rabbit
+  badtrans: true
+- raw: 戊辰
+  result: Earth Dragon
+  badtrans: true
+- raw: 己巳
+  result: Earth Snake
+  badtrans: true
+- raw: 庚午
+  result: Metal Horse
+  badtrans: true
+- raw: 辛未
+  result: Metal Goat
+  badtrans: true
+- raw: 壬申
+  result: Water Monkey
+  badtrans: true
+- raw: 癸酉
+  result: Water Rooster
+  badtrans: true
+- raw: 甲戌
+  result: Wood Dog
+  badtrans: true
+- raw: 乙亥
+  result: Wood Pig
+  badtrans: true
+- raw: 丙子
+  result: Fire Rat
+  badtrans: true
+- raw: 丁丑
+  result: Fire Ox
+  badtrans: true
+- raw: 戊寅
+  result: Earth Tiger
+  badtrans: true
+- raw: 己卯
+  result: Earth Rabbit
+  badtrans: true
+- raw: 庚辰
+  result: Metal Dragon
+  badtrans: true
+- raw: 辛巳
+  result: Metal Snake
+  badtrans: true
+- raw: 壬午
+  result: Water Horse
+  badtrans: true
+- raw: 癸未
+  result: Water Goat
+  badtrans: true
+- raw: 甲申
+  result: Wood Monkey
+  badtrans: true
+- raw: 乙酉
+  result: Wood Rooster
+  badtrans: true
+- raw: 丙戌
+  result: Fire Dog
+  badtrans: true
+- raw: 丁亥
+  result: Fire Pig
+  badtrans: true
+- raw: 戊子
+  result: Earth Rat
+  badtrans: true
+- raw: 己丑
+  result: Earth Ox
+  badtrans: true
+- raw: 庚寅
+  result: Metal Tiger
+  badtrans: true
+- raw: 辛卯
+  result: Metal Rabbit
+  badtrans: true
+- raw: 壬辰
+  result: Water Dragon
+  badtrans: true
+- raw: 癸巳
+  result: Water Snake
+  badtrans: true
+- raw: 甲午
+  result: Wood Horse
+  badtrans: true
+- raw: 乙未
+  result: Wood Goat
+  badtrans: true
+- raw: 丙申
+  result: Fire Monkey
+  badtrans: true
+- raw: 丁酉
+  result: Fire Rooster
+  badtrans: true
+- raw: 戊戌
+  result: Earth Dog
+  badtrans: true
+- raw: 己亥
+  result: Earth Pig
+  badtrans: true
+- raw: 庚子
+  result: Metal Rat
+  badtrans: true
+- raw: 辛丑
+  result: Metal Ox
+  badtrans: true
+- raw: 壬寅
+  result: Water Tiger
+  badtrans: true
+- raw: 癸卯
+  result: Water Rabbit
+  badtrans: true
+- raw: 甲辰
+  result: Wood Dragon
+  badtrans: true
+- raw: 乙巳
+  result: Wood Snake
+  badtrans: true
+- raw: 丙午
+  result: Fire Horse
+  badtrans: true
+- raw: 丁未
+  result: Fire Goat
+  badtrans: true
+- raw: 戊申
+  result: Earth Monkey
+  badtrans: true
+- raw: 己酉
+  result: Earth Rooster
+  badtrans: true
+- raw: 庚戌
+  result: Metal Dog
+  badtrans: true
+- raw: 辛亥
+  result: Metal Pig
+  badtrans: true
+- raw: 壬子
+  result: Water Rat
+  badtrans: true
+- raw: 癸丑
+  result: Water Ox
+  badtrans: true
+- raw: 甲寅
+  result: Wood Tiger
+  badtrans: true
+- raw: 乙卯
+  result: Wood Rabbit
+  badtrans: true
+- raw: 丙辰
+  result: Fire Dragon
+  badtrans: true
+- raw: 丁巳
+  result: Fire Snake
+  badtrans: true
+- raw: 戊午
+  result: Earth Horse
+  badtrans: true
+- raw: 己未
+  result: Earth Goat
+  badtrans: true
+- raw: 庚申
+  result: Metal Monkey
+  badtrans: true
+- raw: 辛酉
+  result: Metal Rooster
+  badtrans: true
+- raw: 壬戌
+  result: Water Dog
+  badtrans: true
+- raw: 癸亥
+  result: Water Pig
+  badtrans: true
